--- a/style.css
+++ b/style.css
@@ -23,10 +23,63 @@ header {
    margin-left: 50px;
 }
 
-.menu a {
-    margin-right: 60px;
+.offscreenMenu {
+    background-color: #333232ff;
+    height: 100vh;
+    width: 100%;
+    max-width: 450px;
+    position: fixed;
+    top: 0;
+    right: -450px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 3rem;
+    transition: .3s ease;
 }
-
+.offscreenMenu.active{
+    right: 0;
+}
+.hamburgerMenu{
+    height: 50px;
+    width: 50px;
+    margin-left: auto;
+    position: relative;
+}
+.hamburgerMenu span{
+    height: 5px;
+    width: 100%;
+    background-color: #ffb400ff;
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .3s ease;
+}
+.hamburgerMenu span:nth-child(1){
+    top: 25%;
+}
+.hamburgerMenu span:nth-child(3){
+    top: 75%;
+}
+.hamburgerMenu.active span:nth-child(1){
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+.hamburgerMenu.active span:nth-child(2){
+    opacity: 0;
+}
+.hamburgerMenu.active span:nth-child(3){
+    top: 50%;
+    transform: translate(-50%, 50%) rotate(-45deg);
+}
+nav {
+    padding: 1rem;
+    display: flex;
+    background-color: #ffb400ff;
+}
 .container {
     display: flex;
     flex-direction: row;
